--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -26,8 +26,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 12
-      - run: yarn create:npmrc
+      - run: npm run create:npmrc
       - run: npm ci
+      - run: npm run patch
       - run: npm publish
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
