--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -13,7 +13,6 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npm test
 
   publish-gpr:
     needs: build
@@ -26,10 +25,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 12
-      - run: npm run create:npmrc
+          registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm run patch
       - run: npm publish
         env:
-          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
-          NODE_AUTH_TOKEN: ${{secrets.PAT}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
